feat(seat): 좌석 번호 중복 검증 로직 추가
- Venue 엔티티에 좌석 번호 중복 검증 메서드 추가
- SeatService의 findSeatsInRange메서드 제거 -> 기존에 이를 사용하던 경우 repository를 의존하도록 변경